--- a/app/templates/users/user.hbs
+++ b/app/templates/users/user.hbs
@@ -20,7 +20,7 @@
         <button
           type="button"
           class="button is-pulled-left mt-4"
-          {{on "click" (fn this.modifyValue)}}
+          {{on "click" (fn this.modifyValue @model.id)}}
         >
           Change Value
         </button>
