Improved scss for user profiles on different resolutions.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -38,6 +38,9 @@ input::placeholder {
 .user-profile {
   background-color: var(--div-bg);
   height: 440px;
+  min-width: 350px;
+  margin: auto 0;
+  padding: 15px 15px;
 }
 
 .user-select {
