--- a/app/templates/users/user.hbs
+++ b/app/templates/users/user.hbs
@@ -6,7 +6,7 @@
           Back to users
         </button>
       </LinkTo>
-      <div class="box user-profile">
+      <div class="user-profile">
         <figure class="avatar">
           <img src={{@model.image}} width="256px" alt="User" />
         </figure>
