--- a/app/templates/users/index.hbs
+++ b/app/templates/users/index.hbs
@@ -1,8 +1,10 @@
 {{page-title 'User'}}
 <div class="container">
   <div class="columns is-centered">
+
     {{#each @model as |user|}}
       <div class="column">
+
         <LinkTo @route="users.user" @model={{user}}>
           <div class="user-select is-220px">
             <img
@@ -11,12 +13,12 @@
               width="60px"
               alt="profile-image"
             />
-            <p>
-              {{user.name}}
-            </p>
+            <p>{{user.name}}</p>
           </div>
         </LinkTo>
+
       </div>
     {{/each}}
+
   </div>
 </div>
