--- a/app/templates/users/user.hbs
+++ b/app/templates/users/user.hbs
@@ -24,7 +24,7 @@
         </p>
 
         {{!-- Place the component to archive/unarchive users here --}}
-
+        <Archive />
       </div>
     </div>
   </div>
