--- a/app/templates/users/index.hbs
+++ b/app/templates/users/index.hbs
@@ -3,21 +3,23 @@
   <div class="columns is-centered">
 
     {{#each @model as |user|}}
-      <div class="column">
+      {{#unless user.archived}}
+        <div class="column">
 
-        <LinkTo @route="users.user" @model={{user}}>
-          <div class="user-select is-220px">
-            <img
-              class="is-pulled-left"
-              src={{user.image}}
-              width="60px"
-              alt="profile-image"
-            />
-            <p>{{user.name}}</p>
-          </div>
-        </LinkTo>
+          <LinkTo @route="users.user" @model={{user}}>
+            <div class="user-select is-220px">
+              <img
+                class="is-pulled-left"
+                src={{user.image}}
+                width="60px"
+                alt="profile-image"
+              />
+              <p>{{user.name}}</p>
+            </div>
+          </LinkTo>
 
-      </div>
+        </div>
+      {{/unless}}
     {{/each}}
 
   </div>
