add acceptance test for user-archive app

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
 <div class="columns is-mobile is-centered">
   <div class="column is-8 has-text-centered">
 
-    <LinkTo @route="users">
+    <LinkTo @route="users" data-users-route>
       <button class="button" type="button">
         See all users
       </button>
